syntax = "proto3";

option csharp_namespace = "GrpcServer";


// The greeting service definition.
service Connections {
  // Sends a greeting
  rpc TestConnection (TestRequest) returns (TestReply);
  rpc EstablishConnectionHealthCheck (ConnectionRequest) returns (ConnectionResponse);
  rpc GetAvailableLicenseCount (LicenseCountRequest) returns (LicenseCountResponse);
}

message TestRequest {

}

message TestReply{
	string connectionResponse = 1;
}

message ConnectionRequest{

}

message ConnectionResponse{
	string licence = 1;
	int32 connectedClients = 2;
}

message LicenseCountRequest {

}

message LicenseCountResponse{
	int32 numberOfAvailableLicenses = 1;
}